--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Repo</title>
 </head>
 <body>
-    <h1>Welcome in Programming </h1>
+    <h1>Welcome in Programming .</h1>
 </body>
 </html>
